# TIN

./: .gitignore  CMakeLists.txt  README.md  test.py
client/: Client.cpp  Client.h  main.cpp
client/controller/: Controller.cpp  Controller.h
client/controller/headers/: Controller.h
client/controller/sources/: Controller.cpp
client/events/: BasicEvent.cpp  BasicEvent.h
client/model/: Model.cpp
client/model/headers/: CategoryInfo.h  ConnectionInfo.h  Model.h  PendingUserInfo.h
client/model/sources/: CategoryInfo.cpp  ConnectionInfo.cpp  Model.cpp  PendingUserInfo.cpp
client/strategy/headers/: BasicEventStrategy.h  CategoryAccessEventStrategy.h  ChooseMenuOptionEventStrategy.h  ConfirmMessageEventStrategy.h  NetworkEventStragegy.h  NetworkEventStrategy.h  NewMessageEventStrategy.h  PendingUserEventStrategy.h  UserAccountEventStrategy.h
client/strategy/sources/: BasicEventStrategy.cpp  CategoryAccessEventStrategy.cpp  ChooseMenuOptionEventStrategy.cpp  ConfirmMessageEventStrategy.cpp  NetworkEventStragegy.cpp  NetworkEventStrategy.cpp  NewMessageEventStrategy.cpp  PendingUserEventStrategy.cpp  UserAccountEventStrategy.cpp
client/view/headers/: View.h
client/view/sources/: View.cpp
clientEvents/headers/: BasicEvent.h  CategoryAccessEvent.h  ChooseMenuOptionEvent.h  ConfirmMessageEvent.h  EventType.h  NetworkEvent.h  NewMessageEvent.h  PendingUserEvent.h  ShowInfoEvent.h  UserAccountEvent.h
clientEvents/sources/: BasicEvent.cpp  CategoryAccessEvent.cpp  ChooseMenuOptionEvent.cpp  ConfirmMessageEvent.cpp  NetworkEvent.cpp  NewMessageEvent.cpp  PendingUserEvent.cpp  ShowInfoEvent.cpp  UserAccountEvent.cpp
client_tests/: clientBasicTest.cpp
logger/: easylogging++.h
networkMessage/: GetMessage.cpp  GetMessage.h  GetMessageType.h  MessageType.h  SimpleMessage.cpp  SimpleMessage.h
networkMessage/headers/: CategoryListMessage.h  CategoryManagementMessage.h  GetMessage.h  MessageTypes.h  NeighboursInfoMessage.h  NetworkControllerErrorMessage.h  RingMessage.h  ServerInfoMessage.h  SimpleMessage.h  UserManagementMessage.h
networkMessage/sources/: CategoryListMessage.cpp  CategoryManagementMessage.cpp  CategoryManagementMessage.cpp~  GetMessage.cpp  NeighboursInfoMessage.cpp  NetworkControllerErrorMessage.cpp  RingMessage.cpp  ServerInfoMessage.cpp  SimpleMessage.cpp  UserManagementMessage.cpp
networkMessage_tests/: messagesBasicTests.cpp  messagesSerializationTests.cpp  messagesTests.cpp
networkModule/headers/: MessageWrapper.h  NetworkController.h
networkModule/sources/: MessageWrapper.cpp  NetworkController.cpp
networkModule_tests/: networkBasicTest.cpp
server/: Server.cpp  Server.h  main.cpp
server/controller/headers/: Controller.h
server/controller/sources/: Controller.cpp
server/exceptions/headers/: ServerUnknownException.h
server/exceptions/sources/: ServerUnknownException.cpp
server/model/headers/: Category.h  CategoryMember.h  Model.h  User.h
server/model/sources/: Category.cpp  CategoryMember.cpp  Model.cpp  User.cpp
server/strategy/headers/: BasicEventStrategy.h  CategoryListMessageStrategy.h  CategoryManagementStrategy.h  ErrorMessageStrategy.h  GetMessageStrategy.h  UserManagementStrategy.h
server/strategy/sources/: BasicEventStrategy.cpp  CategoryListMessageStrategy.cpp  CategoryManagementStrategy.cpp  ErrorMessageStrategy.cpp  GetMessageStrategy.cpp  UserManagementStrategy.cpp
server/utils/: ServerGlobalConstants.h
server_tests/: modelCategoryTest.cpp  modelTest.cpp  serverBasicTest.cpp
utils/: Queue.hpp
wireshark_module/: readme.txt  ring.lua
